tests/fail/15_invalid_bool_comparison.lang
// ОЖИДАЕТСЯ ОШИБКА: операторы отношения (<, >, <=, >=) применимы только к числам
функция Начало() : целое {
    лог а = истина;
    лог б = ложь;
    
    // Статическая ошибка: операторы отношения неприменимы к логическим типам
    лог рез = а < б; 
    
    вернуть 0;
}
